fix(referral): popup's z-index

--- a/app/assets/scss/components/referral/_referral.scss
+++ b/app/assets/scss/components/referral/_referral.scss
@@ -95,6 +95,7 @@
   width: 330px !important;
   height: auto !important;
   text-align: left;
+  z-index: 10;
   .joyride-content-wrapper {
     padding-top: 30px !important;
   }
